--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -30,6 +30,12 @@
         <i class="material-icons toggle-password">visibility</i>
       </div>
 
+      <div class="form_wrapper">
+        <input id="uuid" name="uuid" type="text" required>
+        <label for="uuid">Uuid</label>
+        <i class="material-icons">person</i>
+      </div>
+
       <!-- <div class="form_wrapper">
         <input id="passport" name="passport" type="text" required>
         <label for="passport">Passport</label>
