--- a/flask/templates/register.html
+++ b/flask/templates/register.html
@@ -28,10 +28,20 @@
             <i class="material-icons">visibility</i>
         </div>
 
+        <div class="form_wrapper">      
+            <input id="phone" name="phone" type="text" required>
+            <label for="phoner">Phone</label>
+            <i class="material-icons">phone</i>
+        </div>
         <div class="form_wrapper">
-            <input id="passport" name="passport" type="text" required>
-            <label for="passport">Passport</label>
-            <i class="material-icons">settings</i>
+            <input id="address" name="address" type="text" required>
+            <label for="address">Address</label>
+            <i class="material-icons">home</i>
+        </div>
+        <div class="form_wrapper">
+            <input id="uuid" name="uuid" type="text" required>
+            <label for="uuid">UUID</label>
+            <i class="material-icons">lock</i>
         </div>
 <!-- 
         <div class="form_wrapper">
