--- a/flask/templates/register.html
+++ b/flask/templates/register.html
@@ -43,6 +43,11 @@
             <label for="uuid">UUID</label>
             <i class="material-icons">lock</i>
         </div>
+        <div class="form_wrapper">
+            <input id="inforuser" name="inforuser" type="text" required>
+            <label for="inforuser">Inforuser</label>
+            <i class="material-icons">settings</i>
+        </div>
 <!-- 
         <div class="form_wrapper">
             <input id="phone" name="phone" type="text"  required>
