--- a/flask/templates/search_results.html
+++ b/flask/templates/search_results.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Users Accounts</title>
+    <title>Search Results</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        /* Đổi màu viền của bảng thành màu đen */
-        table.table {
-            border: 2px solid black !important; /* Viền ngoài của bảng */
-        }
-
-        /* Đổi màu viền cho từng ô trong bảng thành màu đen */
-        table.table td, table.table th {
-            border: 1px solid black !important; /* Viền giữa các ô của bảng */
-        }
-    </style>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- Nhập jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-5">Users Accounts</h1>
+    <div class="container-fluid">
+        <h1>Search Results</h1>
+
+        <!-- User Table -->
         <table class="table table-bordered mt-3">
             <thead>
                 <tr>
@@ -39,7 +30,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for customer in customers %}
+                {% for customer in users %}
                 <tr>
                     <td>{{ customer.id }}</td>
                     <td contenteditable="true">{{ customer.username }}</td>
@@ -61,9 +52,17 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        <div>
+            <a href="{{ url_for('users_accounts', page=1) }}">Back to User List</a>
+        </div>
     </div>
 
     <script>
+        // Xử lý sự kiện Logout
+        $(document).on('click', '#logout-btn', function() {
+            window.location.href = '/logout'; // Chuyển hướng đến trang logout
+        });
         // Xử lý sự kiện Update
         $(document).on('click', '.update-btn', function() {
             var id = $(this).data('id');
@@ -123,6 +122,7 @@
                 });
             }
         });
+
     </script>
 </body>
 </html>
